--- a/WebTimeSheetManagement/Web.config
+++ b/WebTimeSheetManagement/Web.config
@@ -15,8 +15,8 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="TimesheetDBEntities" connectionString="Data Source=.; initial catalog=timesheet; user id=sa; password=SqlAdmin2099;" providerName="System.Data.SqlClient" />
-    <add name="elmah-sqlserver" connectionString="Data Source=.; initial catalog=timesheet; user id=sa; password=SqlAdmin2099;" providerName="System.Data.SqlClient" />
+    <add name="TimesheetDBEntities" connectionString="Data Source=.; initial catalog=WebTimeSheet; user id=sa; password=SqlAdmin2099;" providerName="System.Data.SqlClient" />
+    <add name="elmah-sqlserver" connectionString="Data Source=.; initial catalog=WebTimeSheet; user id=sa; password=SqlAdmin2099;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
